# src/modules/branchs/controller/branchs.controller.ts
@@ -1,0 +1,51 @@
+import {
+  Controller,
+  Get,
+  Post,
+  Body,
+  Param,
+  Delete,
+  Put,
+  Query,
+  UseInterceptors,
+} from '@nestjs/common';
+import { ApiBearerAuth, ApiTags } from '@nestjs/swagger';
+import { BranchsService } from '../service/branchs.service';
+import { CreateBranchDto } from '../dto/create-branch.dto';
+import { UpdateBranchDto } from '../dto/update-branch.dto';
+import { QuerysBranchDto } from '../dto/querys-branch.dto';
+import { DataBaseInterceptor } from 'src/http-exceptions/errors/interceptors/dataBase.interceptor';
+
+@ApiBearerAuth()
+@ApiTags('branchs')
+@Controller('branchs')
+export class BranchsController {
+  constructor(private readonly branchsService: BranchsService) {}
+
+  @Get(':id')
+  findOne(@Param('id') id: string) {
+    return this.branchsService.findOne(id);
+  }
+
+  @Get()
+  findAll(@Query() querys: QuerysBranchDto) {
+    return this.branchsService.findAll(querys);
+  }
+
+  @Post()
+  @UseInterceptors(DataBaseInterceptor)
+  create(@Body() createBranchDto: CreateBranchDto) {
+    return this.branchsService.create(createBranchDto);
+  }
+
+  @Put(':id')
+  @UseInterceptors(DataBaseInterceptor)
+  update(@Param('id') id: string, @Body() updateBranchDto: UpdateBranchDto) {
+    return this.branchsService.update(id, updateBranchDto);
+  }
+
+  @Delete(':id')
+  remove(@Param('id') id: string) {
+    return this.branchsService.remove(id);
+  }
+}
